@startuml Controller_Layer_V2
!include 00_Styling.puml
!include 03_Service_Layer.puml
!include 02_Repository_Layer.puml
skinparam shadowing false
skinparam classAttributeIconSize 0

package "Controller Layer" {

    class AuthController {
        + login(LoginRequest): ResponseEntity<LoginResponse>
        + register(RegisterRequest): ResponseEntity<String>
    }

    class DepotController {
        + createDepot(DepotInputDTO): ResponseEntity<DepotDTO>
        + getListDepot(): ResponseEntity<List<DepotDTO>>
    }

    class FleetController {
        + createFleet(FleetInputDTO): ResponseEntity<FleetDTO>
        + getFleet(): ResponseEntity<List<FleetDTO>>
        + getFleetById(Long): ResponseEntity<FleetDTO>
    }

    class VehicleController {
        + getListVehicles(page, size): ResponseEntity<PageResponse<VehicleDTO>>
        + createVehicle(VehicleInputDTO, fleetId): ResponseEntity<VehicleDTO>
        + updateVehicle(id, VehicleUpdateDTO): ResponseEntity<VehicleDTO>
    }

    class VehicleTypeController {
        + createVehicle(VehicleTypeInputDTO): ResponseEntity<VehicleTypeDTO>
        + getVehicleTypesByBranchId(): ResponseEntity<List<VehicleTypeDTO>>
    }

    class OrderController {
        + importOrders(OrderImportRequest): ResponseEntity<ImportResultDTO>
        + getListOrders(page, size): ResponseEntity<PageResponse<OrderDTO>>
        + updateOrder(id, date, OrderInputDTO): ResponseEntity<OrderDTO>
    }

    class OptimizationJobController {
        + submitRoutePlanning(RoutePlanningRequest): ResponseEntity<OptimizationJobDTO>
        + getCurrentRunningJob(): ResponseEntity<OptimizationJobDTO>
        + getJobHistory(limit): ResponseEntity<List<OptimizationJobDTO>>
        + getJobById(id): ResponseEntity<OptimizationJobDTO>
        + cancelJob(id): ResponseEntity<Void>
    }

    class SolutionController {
        + getSolutionById(id): ResponseEntity<SolutionDetailResponseDTO>
    }

    class OptimizationCallbackController {
        + onOptimizationComplete(CompletionCallback): ResponseEntity<Void>
        + onOptimizationFailed(FailureCallback): ResponseEntity<Void>
        + onProgressUpdate(ProgressCallback): ResponseEntity<Void>
    }

    class BaseController <<Abstract>> {
    }
}

' ============================================
' class -> SERVICE (Dependencies)
' ============================================

DepotController --> DepotService
FleetController --> FleetService
VehicleController --> VehicleService
VehicleTypeController --> VehicleTypeService
OrderController --> OrderImportService
OptimizationJobController --> OptimizationJobService
SolutionController --> SolutionService
OptimizationCallbackController --> OptimizationCallbackService

' Inheritance from BaseController
DepotController --|> BaseController
OrderController --|> BaseController
VehicleController --|> BaseController
' ... các controller khác cũng kế thừa BaseController

' ============================================
' NOTES & API DOCUMENTATION
' ============================================

note right of OptimizationJobController
  **Endpoint: /api/v1/jobs**
  Xử lý các tác vụ tối ưu hóa (VRP).
  - Submit job trả về 202 Accepted.
  - Sử dụng CurrentUserUtil để lấy BranchId.
end note

note bottom of OptimizationCallbackController
  **Endpoint: /api/v1/solutions/callbacks**
  Dành cho Optimization Engine gọi ngược lại 
  hệ thống khi tính toán xong hoặc lỗi.
  Không yêu cầu User Token (thường bảo mật bằng IP/Secret).
end note

note top of OrderController
  **Endpoint: /api/v1/orders**
  Hỗ trợ import đa định dạng qua 
  MULTIPART_FORM_DATA_VALUE.
end note

legend right
    **Cấu trúc URL thống nhất:**
    /api/v1/{resource}

    **Cơ chế bảo mật:**
    • Hầu hết các Controller lấy **branchId**
      từ `CurrentUserUtil` (SecurityContext).
    • `AuthController` xử lý Login/Register
      và cấp phát JWT Token.

    **Đặc điểm nổi bật:**
    • Sử dụng PageResponse cho các API danh sách.
    • Phân tách rõ rệt giữa Vehicle và VehicleType.
    • Có controller riêng dành cho Callbacks từ Engine.
endlegend

@enduml